Fix: GameEngine missing moves (Revert incorrect cost check)

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "jimp": "^1.6.0",
-    "phaser": "^3.90.0"
+    "phaser": "^3.90.0",
+    "tone": "^15.1.22"
   }
 }
