Add standalone AI profile labeling tools
Extract label logic into scripts and add a runnable command to relabel evolved profiles.

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ai:selfplay:tune": "tsx scripts/ai_selfplay_tune.ts",
     "ai:selfplay:benchmark": "tsx scripts/ai_selfplay_benchmark.ts",
     "ai:evolve": "tsx scripts/ai_evolve.ts",
+    "ai:label": "tsx scripts/ai_profile_label_run.ts",
     "prepare": "husky"
   },
   "devDependencies": {
