Extract tournament scoring into reusable module.
Add a standalone tournament runner and npm script for ad-hoc rankings.

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ai:selfplay:benchmark": "tsx scripts/ai_selfplay_benchmark.ts",
     "ai:evolve": "tsx scripts/ai_evolve.ts",
     "ai:label": "tsx scripts/ai_profile_label_run.ts",
+    "ai:tournament": "tsx scripts/ai_tournament.ts",
     "prepare": "husky"
   },
   "devDependencies": {
