--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "preview": "vite preview",
     "test": "vitest",
     "test:run": "vitest run",
-    "check": "tsc --noEmit && vitest run && npm run ai:selfplay:benchmark -- --width 20 --height 20 --players 6 --turns 100 --quiet",
+    "check": "tsc --noEmit && vitest run && npm run ai:selfplay:benchmark -- --quiet",
     "ai:selfplay": "tsx scripts/ai_selfplay.ts",
     "ai:selfplay:tune": "tsx scripts/ai_selfplay_tune.ts",
     "ai:selfplay:benchmark": "tsx scripts/ai_selfplay_benchmark.ts",
