Unified PNG background transparency and asset script
- Single processBackgroundTransparency for all PNGs (black/white tolerance)

- PNG_KEYS_FOR_TRANSPARENCY list; texKey() for drawing

- Add asset_background_to_black.ts script and npm run asset:bg-to-black

- Remove unused icon_gold_blackbg_1767659375024.png

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ai:evolve": "tsx scripts/ai_evolve.ts",
     "ai:label": "tsx scripts/ai_profile_label_run.ts",
     "ai:tournament": "tsx scripts/ai_tournament.ts",
+    "asset:bg-to-black": "tsx scripts/asset_background_to_black.ts",
     "prepare": "husky"
   },
   "devDependencies": {
